Fixes for alignments, paragraphs, dropcaps.

--- a/libretto/css/blocks.css
+++ b/libretto/css/blocks.css
@@ -25,7 +25,6 @@ Description: Used to style Gutenberg Blocks.
 	font-size: 16px;
 	font-style: italic;
 	line-height: 1.2;
-	margin: 1em 0.5em 0.5em;
 	text-align: center;
 }
 
